--- a/src/pussodoro.css
+++ b/src/pussodoro.css
@@ -1,13 +1,14 @@
 box {
     background-color: whitesmoke;
     display: block;
-    width: 40%;
-    border-radius: 10px;
-    border: 3px solid black;
+    width: 70%;
+    max-width: 500px;
+    border-radius: 20px;
+    border: 0px solid black;
     opacity: 90%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20%;
+    margin-top: 30px;
     padding: 15px;
     text-align: center;
 }
@@ -16,25 +17,23 @@ body {
     margin: 0;
     height: 100vh;
     background: linear-gradient(to right, #BD2734, #851D2D);
-    /* Gradient going from orange to peach */
 }
 
 brand {
     display: block;
-    font-size: 6vw;
+    font-size: 250%;
     margin-bottom: 10px;
 }
 
 timer {
     display: block;
-    font-size: 8vw;
+    font-size: 400%;
+    padding-top: 10px;
 }
 
 text {
-    display: block;
-    text-align: left;
-    font-size: 3vw;
-    margin-left: 2vw;
+    font-size: xx-large;
+    line-height: 45px;
 }
 
 .button-1 {
@@ -62,6 +61,7 @@ text {
   -webkit-user-select: none;
   touch-action: manipulation;
   margin-top: 15px; 
+  margin-bottom: 10px
 }
 
 .button-1:hover,
