--- a/src/pussodoro.css
+++ b/src/pussodoro.css
@@ -1,28 +1,36 @@
 box {
-    background-color: whitesmoke;
-    display: block;
+    background-color: #FFA896;
     width: 70%;
     max-width: 500px;
     border-radius: 20px;
     border: 0px solid black;
     opacity: 90%;
+}
+
+body {
+    margin: 0;
+    background: linear-gradient(to right, #cd1c18, #9b1313);
+    color: #38000A;
+    font-family: Lora;
+}
+
+.item {
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
     padding: 15px;
     text-align: center;
-}
-
-body {
-    margin: 0;
-    height: 100vh;
-    background: linear-gradient(to right, #BD2734, #851D2D);
+    display: block;
 }
 
 brand {
+    max-width: 100%;
     display: block;
-    font-size: 250%;
+    font-size: max(10vw, min(70px, 17vw));
+    
     margin-bottom: 10px;
+    font-family: cherry bomb one;
+    color: #FFA896;
 }
 
 timer {
@@ -36,14 +44,27 @@ text {
     line-height: 45px;
 }
 
+bottom {
+    width: 60%;
+    position: absolute;
+    top: 100vh;
+    border-top: 3px solid black;
+    background-color: whitesmoke;
+    height: 100vh;
+
+    padding: 10px 20%;
+    
+}
+
 .button-1 {
-  background-color: #9f2131;
+  background-color: #cd1c18;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #FFA896;
   cursor: pointer;
   display: inline-block;
+  font-family: lora;
   font-size: 30px;
   font-weight: 500;
   height: 60px;
@@ -67,4 +88,16 @@ text {
 .button-1:hover,
 .button-1:focus {
   background-color: #F082AC;
+}
+
+h1 {
+    color: #9b1313;
+    font-family: rubik;
+    font-weight: 500;
+
+}
+
+p {
+    font-family: lora;
+    color: #38000A;
 }
