--- a/src/pussodoro.css
+++ b/src/pussodoro.css
@@ -63,6 +63,11 @@ input[type="time"] {
     -webkit-appearance: none;
 }
 
+input[type="time"]::-webkit-datetime-edit-minute-field,
+input[type="time"]::-webkit-datetime-edit-ampm-field {
+    color: #000; /* Set text color for time-specific fields */
+}
+
 timer {
     display: block;
     font-size: 400%;
