--- a/src/pussodoro.css
+++ b/src/pussodoro.css
@@ -65,7 +65,7 @@ input[type="time"] {
 
 input[type="time"]::-webkit-datetime-edit-minute-field,
 input[type="time"]::-webkit-datetime-edit-ampm-field {
-    color: #000; /* Set text color for time-specific fields */
+    color: #38000A;
 }
 
 timer {
